@@ -8,6 +8,7 @@
 - compat-25: Add ~save-mark-and-excursion~.
 - compat-26: Add ~region-bounds~.
 - compat-27: Add ~date-ordinal-to-time~.
+- compat-27: Add ~major-mode-suspend~ and ~major-mode-restore~.
 - compat-27: Add ~make-decoded-time~.
 - compat-27: Add ~minibuffer-history-value~.
 - compat-27: Add ~ring-resize~.
